--- a/src/styles/_current_temp.scss
+++ b/src/styles/_current_temp.scss
@@ -1,19 +1,36 @@
 .current-temp-info {
   border-radius: 4px;
   justify-self: center;
-  padding: 0 12px;
-}
+  padding: 0 0.75rem;
+  // @mixin media queries
+  @include for-mobile-l {
+    padding-left: 0.75rem;
+    padding-right: 0;
+  }
+  @include for-tablet {
+    justify-self: end;
+    padding: 0;
+  }
+}// end current-temp-info
 .current-icon {
-  height: 60px;
+  height: 3.75rem;
   .svg-inline--fa {
-   margin-top: 10px;
-   font-size: 50px;
+    margin-top: 0.625rem;
+    font-size: 3.125em;
     color: $big-icon;
+
+    @include for-tablet {
+      font-size: 4em;
+    }
   }
   .fa-sun {
     margin-top: 0;
-    font-size: 60px;
+    font-size: 3.750em;
     color: $yellow;
+
+    @include for-tablet {
+      font-size: 4.625em;
+    }
   }
   .fa-bolt {
     color: $fabold-icon;
@@ -21,20 +38,28 @@
   .fa-snowflake {
     color: $light-purple;
   }
+ } // end current-icon
 
- }
-
- .text-temp-info {
+.text-temp-info {
   line-height: 0.8;
-  margin-top: 4px;
-  margin-left: 4px;
-  font-size: 12px;
+  margin-top: 0.25rem;
+  margin-left: 0.25rem;
+  font-size: 0.75em;
   font-weight: 600;
   opacity: 0.4;
- }
- .current-temp {
-  margin-left: 4px;
-  margin-bottom: 5px;
-  font-size: 32px;
+
+  @include for-tablet {
+   margin-top: 1rem;
+   line-height: 0.8;
+   font-size: 1em;
+  }
+}
+.current-temp {
+  margin-left: 0.25rem;
+  margin-bottom: 0.3125rem;
+  font-size: 2em;
   font-weight: 500;
- }
+  @include for-tablet {
+    font-size: 2.5em;
+  }
+}
