--- a/src/styles/_forecast_next_days.scss
+++ b/src/styles/_forecast_next_days.scss
@@ -1,24 +1,57 @@
 .forecast-days {
-    margin-bottom: 52px;
-
+    margin-bottom: 3.25rem;
+    // @mixin media queries
+    @include for-tablet {
+      margin-bottom: 4.65rem;
+      display: grid;
+      grid-template-columns: 20% 20% 20% 20%;
+      grid-column-gap: 0.75rem;
+      justify-content: space-between;
+      padding: 0 0.75rem;
+    }
+    @include for-laptop {
+      grid-column-gap: 0;
+      justify-content: center;
+    }
   .forecast-day {
-    margin-bottom: 16px;
-    padding: 12px 22px;
+    margin-bottom: 1rem;
+    padding: 0.75rem 1.375rem;
     box-shadow: 1px 1px 4px  rgba(0, 0, 0, 0.1);
     display: grid;
     grid-template-columns: 50% 50%;
+
+    @include for-tablet {
+      padding: 0;
+      margin-bottom: 0;
+      display: flex;
+      flex-direction: column-reverse;
+      justify-content: center;
+      box-shadow: none;
+    }
     .forecast-temp-icon {
       width: 100%;
       display: inline-flex;
       justify-content: space-between;
       align-items: center;
+
+      @include for-tablet {
+       justify-content: center;
+     }
       .day-temp {
-        font-size: 12px;
+        font-size: 0.75em;
         font-weight: 500;
+
+        @include for-tablet {
+          font-size: 1.35em;
+        }
       }
       svg {
-        font-size: 16px;
+        font-size: 1em;
         color: $big-icon;
+
+        @include for-tablet {
+          font-size: 1.65em;
+        }
       }
       .fa-sun {
         color: $yellow;
@@ -32,9 +65,13 @@
     } // end forecast-temp-icon
     .day-name {
       align-self: center;
-      font-size: 12px;
+      font-size: 0.75em;
       font-weight: 900;
       opacity: 0.6;
+
+      @include for-tablet {
+        font-size: 1em;
+      }
     }
   } // end forecast-day
-}
+} // end forecast-days
