--- a/src/styles/_weather_wrapper.scss
+++ b/src/styles/_weather_wrapper.scss
@@ -1,45 +1,111 @@
+@import './_media_queries';
+
 //setting general behaviours
 .weather-wrapper {
   margin: 0 auto;
-  margin-bottom: 56px;
+  margin-bottom: 3.5rem;
   background-color: white;
   border-radius: 26px;
-  margin-top: 40px;
+  margin-top: 2.5rem;
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: auto;
   grid-template-areas:
-    "header header "
-    "main main"
-    "footer footer";
+  "header header "
+  "main main"
+  "footer footer";
+  // @mixin media queries
+   @include for-tablet {
+     grid-row-gap: 42px;
+   }
   .current-header-info {
     grid-area: header;
-    padding: 22px 16px;
-    padding-bottom: 0;
+    padding-left: 1.375rem;
+    padding-right: 0.53rem;
+    padding-top: 1rem;
     display: grid;
     grid-template-columns: 65% 35%;
-    grid-column-gap: 10px;
-  }
+    grid-column-gap: 0.625rem;
+
+    @include for-mobile-m {
+      padding-right: 0;
+    }
+    @include for-tablet {
+      grid-template-columns: 63% 35%;
+      padding-top: 3.375rem;
+      padding-left: 3rem;
+      padding-right: 3rem;
+    }
+    @include for-laptop {
+      padding-left: 5rem;
+      padding-right: 5rem;
+    }
+    @include for-laptop-l {
+      padding-left: 7rem;
+      padding-right: 7rem;
+    }
+  } // end current-header-info
   .details-and-imgage {
-    padding-left: 22px;
-    padding-right: 4px;
+    padding-left: 1.375rem;
+    padding-right: 0.25rem;
     grid-area: main;
     display: grid;
     grid-template-columns: 35% 65%;
-    margin-bottom: 26px;
- .image-weather svg  {
-  float: right;
-   margin-top: 82px;
-   padding: 0;
-   height: 180px;
-   width: 180px;
-  }
- }
+    margin-bottom: 1.625rem;
+
+    @include for-tablet {
+       grid-template-columns: 35% 53%;
+    }
+    @include for-laptop {
+      padding-left: 5.375rem;
+    }
+    .image-weather svg  {
+     float: right;
+     margin-top: 5.125rem;
+     padding: 0;
+     height: 11rem;
+     width: 12.5rem;
+
+     @include for-mobile-m {
+       margin-top: 2.75rem;
+       height: 13.4375rem;
+       width: 14.25rem;
+     }
+     @include for-mobile-l {
+       margin-top: 0.8rem;
+       height: 15.4375rem;
+       width: 16.25rem;
+     }
+     @include for-tablet {
+       margin-top: 0.6rem;
+       height: 19.4375rem;
+       width: 29.25rem;
+     }
+     @include for-laptop {
+       margin-top: 0;
+       height: 25.4375rem;
+       width: 43.25rem;
+     }
+     @include for-laptop-l {
+       width: 53.25rem;
+     }
+    } // end image-weather svg
+     @include for-tablet {
+       padding-left: 3.375rem;
+     }
+     @include for-laptop-l {
+       padding-left: 7.375rem;
+     }
+  } // end details-and-images
  .sundetails-and-forecast {
   grid-area: footer;
   display: grid;
   grid-template-rows: 20% 62%;
-  grid-row-gap: 18px;
+  grid-row-gap: 1.125rem;
+
+  @include for-tablet {
+    grid-row-gap: 3.525rem;
+  }
  }
 } // end weather-wrapper
 
