--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -3,8 +3,7 @@
   margin: 0 auto;
   .btn-primary {
     font-weight: 500;
-    font-size: 0.8em;
-    padding: 0.35rem 1.2rem;
+    font-size: 0.8em !important;
     border-style: none;
     box-shadow: 1px 1px 8px  rgba(0, 0, 0, 0.2);
     transition: 0.3s;
@@ -12,24 +11,25 @@
 }
 
 .btn-primary.search  {
- margin-top:0.125rem;
- padding: 0.38rem 1rem;
- border-top-right-radius: 1.75rem;
- border-bottom-right-radius: 1.75rem;
+ margin-left: 0.3125rem;
+ padding: 0.4rem 1rem;
+ border-radius: 0.25rem;
  border-color: none !important;
  outline: none !important;
  box-shadow: none !important;
  // @mixin media queries
  @include for-tablet {
-   padding: 0.38rem 1.5rem;
+   padding: 0.5rem 1.5rem;
  }
  @include for-laptop {
-   padding: 0.38rem 2rem;
+   font-size: 1em;
+   padding: 0.5rem 2rem;
  }
 }
 
 .btn-primary.go-back {
   margin-top: 1rem;
+  border-radius: 0.25rem;
   padding: 0.38rem 4.75rem;
   font-size: 0.8em;
   transition: 0,3s;
