--- a/src/styles/_forecast_next_days.scss
+++ b/src/styles/_forecast_next_days.scss
@@ -1,7 +1,9 @@
 .forecast-days {
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
     margin-bottom: 3.25rem;
     // @mixin media queries
     @include for-tablet {
+      border-top: none;
       margin-bottom: 4.65rem;
       display: grid;
       grid-template-columns: 20% 20% 20% 20%;
@@ -14,13 +16,13 @@
       justify-content: center;
     }
   .forecast-day {
-    margin-bottom: 1rem;
-    padding: 0.75rem 1.375rem;
-    box-shadow: 1px 1px 4px  rgba(0, 0, 0, 0.1);
+    padding: 1rem 1.375rem;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     display: grid;
     grid-template-columns: 50% 50%;
 
     @include for-tablet {
+      border-bottom: none;
       padding: 0;
       margin-bottom: 0;
       display: flex;
