--- a/src/styles/_search_bar.scss
+++ b/src/styles/_search_bar.scss
@@ -3,32 +3,32 @@
 
 .search-bar {
   padding-top: 2.5rem;
-  width: 100%;
+  height: 5.5rem;
   .search-bar-items {
     display: flex;
     flex-direction: row;
+    align-content: space-between;
     align-items: center;
   }
   .search-icon {
-    align-self: center;
     font-size: 1em;
-    margin-right: 0.3rem;
   }
   #city {
     padding-left: 0.625rem;
     padding-top: 0;
     padding-bottom: 0;
     height: 1.88rem;
-    border-top-left-radius: 1.75rem;
-    border-bottom-left-radius: 1.75rem;
+    border-radius: 0.25rem;
     border: none;
     border: 0;
     box-shadow: 1px 1px 8px  rgba(0, 0, 0, 0.2);
     // @mixin media queries
     @include for-tablet {
+      height: 1.95rem;
       width: 23.3125rem;
     }
     @include for-laptop {
+      height: 2.1rem;
       width: 26.875rem;
     }
   } // end city
