refractoring code - implement UI styles

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -15,16 +15,16 @@
 // small-icon: for icons on white bg (icon-color same than body-bg)
 // fabold-icon-color: custom color for this icon
 
-$main-bg: #545598;
+$main-bg: #586e9f;
 // BUTTON & SEARCHBAR
-$primary: #FB3089;
+$primary: #1c005e;
 $btn-primary-hover: #F9B406;
 $gray: #C0BCBC;
 $dark-gray: #999191;
 // TEXTS
 $text-main: #2846A6;
-$text-secondary: rgba($text-main, .6);
-$text-tertiary: rgba($text-main, .4);
+$text-secondary: rgba($text-main, .8);
+$text-tertiary: rgba($text-main, .7);
 // ICONS
 $light-purple: #C0B4FE;
 $yellow: #F9D206;
