--- a/src/styles/_current_suntimes.scss
+++ b/src/styles/_current_suntimes.scss
@@ -5,11 +5,11 @@
   align-items: center;
   .sun-time {
     align-self:center;
-    font-size: 1em;
+    font-size: 0.8em;
     font-weight: 500;
     // @mixin media queries
     @include for-tablet {
-      font-size: 1.5em;
+      font-size: 1em;
     }
   }
   .sun-icon {
@@ -25,8 +25,7 @@
     }
     .fa-arrow-up {
       font-size: 0.656em;
-      color: $text-main;
-      opacity: 0.6;
+      color: $text-secondary;
 
       @include for-tablet {
         font-size: 0.88em;
@@ -34,8 +33,8 @@
     }
     .fa-arrow-down {
       font-size: 0.625em;
-      color: $text-main;
-      opacity: 0.6;
+      color: $text-secondary;
+  
 
       @include for-tablet {
         font-size: 0.9em;
@@ -43,8 +42,8 @@
     }
     .sun-text {
       font-size: 0.625em;
-      font-weight: 500;
-      opacity: 0.4;
+      font-weight: 600;
+      color: $text-main;
       padding-left: 0.25rem;
 
       @include for-tablet {
