--- a/src/styles/_weather_wrapper.scss
+++ b/src/styles/_weather_wrapper.scss
@@ -5,8 +5,8 @@
   margin: 0 auto;
   margin-bottom: 3.5rem;
   background-color: white;
-  border-radius: 4px;
   margin-top: 2.5rem;
+  padding: 1.5rem;
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: auto;
@@ -16,86 +16,43 @@
   "footer footer";
   // @mixin media queries
    @include for-tablet {
-     grid-row-gap: 2.6875rem;
+     padding: 3rem;
+     grid-row-gap: 1rem;
    }
+   @include for-laptop {
+    padding: 3rem 5rem;
+  }
   .current-header-info {
     grid-area: header;
-    padding-left: 1.375rem;
-    padding-right: 0.53rem;
-    padding-top: 1rem;
     display: grid;
     grid-template-columns: 65% 35%;
-    grid-column-gap: 0.625rem;
-
-    @include for-mobile-m {
-      padding-right: 0;
-    }
-    @include for-tablet {
-      grid-template-columns: 63% 35%;
-      padding-top: 3.375rem;
-      padding-left: 3rem;
-      padding-right: 3rem;
-    }
-    @include for-laptop {
-      padding-left: 5rem;
-      padding-right: 5rem;
-    }
-    @include for-laptop-l {
-      padding-left: 7rem;
-      padding-right: 7rem;
-    }
+    margin-bottom: 1rem;
+ 
   } // end current-header-info
   .details-and-imgage {
-    padding-left: 1.375rem;
-    padding-right: 0.25rem;
     grid-area: main;
     display: grid;
-    grid-template-columns: 35% 65%;
+    grid-template-columns: 30% 50%;
+    grid-column-gap: 3rem;
     margin-bottom: 1.625rem;
-
-    @include for-tablet {
-       grid-template-columns: 35% 53%;
-    }
-    @include for-laptop {
-      padding-left: 5.375rem;
-    }
+ 
     .image-weather svg  {
-     float: right;
-     margin-top: 5.125rem;
      padding: 0;
-     height: 11rem;
-     width: 12.5rem;
-
+     height: fit-content;
+     width: 9.5rem;
      @include for-mobile-m {
-       margin-top: 2.75rem;
-       height: 13.4375rem;
-       width: 14.25rem;
+       width: 11.25rem;
      }
-     @include for-mobile-l {
-       margin-top: 0.8rem;
-       height: 15.4375rem;
+     @include for-tablet {
        width: 16.25rem;
      }
-     @include for-tablet {
-       margin-top: 0.6rem;
-       height: 19.4375rem;
-       width: 29.25rem;
-     }
      @include for-laptop {
-       margin-top: 0;
-       height: 25.4375rem;
-       width: 43.25rem;
+       width: 22.25rem;
      }
      @include for-laptop-l {
-       width: 53.25rem;
+       width: 23.25rem;
      }
     } // end image-weather svg
-     @include for-tablet {
-       padding-left: 3.375rem;
-     }
-     @include for-laptop-l {
-       padding-left: 7.375rem;
-     }
   } // end details-and-images
  .sundetails-and-forecast {
   grid-area: footer;
